# megapoly

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
backend/src/domain/: board.rs  events.rs  game.rs  mod.rs  player.rs  session.rs  user.rs
backend/src/handlers/: mod.rs
backend/src/ledger/: mod.rs
base/: directrices_tecnicas.md  expansiones.md  game_details_spanish.md  game_details_us.md  game_rules.md
frontend/: package-lock.json  package.json
frontend/src/: theme.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/lobby/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/Board/: MonopolyBoard.tsx
frontend/src/data/: boardData.ts
frontend/src/store/: useGameStore.ts
