[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9.2"
chrono = { version = "0.4.43", features = ["serde"] }
